# theAfricanQuant.github.io

./: .gitignore  .nojekyll  404.html  404.qmd  AGENTS.md  README.md  _quarto.yml  about.html  about.qmd  chatbot.html  index.html  index.qmd  listings.json  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
blog/: _metadata.yml  index.html  index.qmd
blog/2023-December-27-Data-Wrangling/: Data_Wrangling.html  Data_Wrangling.ipynb
blog/2024-April-03-User-Defined-Functions-In-DuckDB/: Generate dummy data with user defined functions (UDFs).ipynb  GenerateDummyDatawithUserDefinedFunctions_(UDFs).html  udf.duck.db  udf.duck.db.wal
blog/2024-February-24-Introduction-to-Matplotlib/: Introduction_to_matplotlib.html  Introduction_to_matplotlib.ipynb  download_and_combine_csv.py
blog/2024-January-04-Karachi-Property-Prices/: KarachiPropertyPrices.html  KarachiPropertyPrices.ipynb  karachi-pakistan-property-prices-2023.csv
blog/2024-June-19-Walrus-Operator/: theWalrusOperator.html  theWalrusOperator.ipynb
blog/2024-May-15-Working-with-Dictionaries-and-DataFrames/: WorkingWithDictionaries&DataFrames.ipynb  WorkingWithDictionariesAndDataFrames.html  WorkingWithDictionariesAndDataFrames.ipynb
blog/2024-May-25-Lambda-Functions/: lambda_functions.html  lambda_functions.ipynb  synthetic_stock_data.csv
docs/: 404.html  CNAME  index.html  listings.json  search.json
docs/blog/: index.html
docs/projects/: index.html
html/: styles-dark.scss  styles.scss
projects/: index.html  index.qmd
resume/: index.html  index.qmd
(+44 files in other folders)
