[project]
name = "theafricanquant-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.1",
    "faker>=37.0.0",
    "ipython>=9.0.2",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "scikit-learn>=1.6.1",
]



[tool.setuptools.packages.find]
where = ["."]
exclude = ["img", "blog", "resume", "projects"]